# roastnotes

./: .gitignore  README.md
backend/: .gitignore  Dockerfile  README.md  alembic_copy.ini  docker-compose.yml  fly.toml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 2025_02_03_0801-8d8192949d3e_initial_migration.py  2025_02_06_1926-f18b6a454e3a_initial_migration.py  2025_02_11_0933-0b5bdd2a6636_roast_update_bean_details_addition.py  2025_02_12_0837-1c1531a1c138_add_group_roast_collection_and_cached_.py  2025_02_12_2235-9d827f14a4fd_add_roasters_table.py
backend/roastnotes/: main.py
backend/roastnotes/core/: config.py  db.py  lib.py  security.py
backend/roastnotes/models/: group.py  group_roast_collection.py  groupmember.py  rating.py  roast.py  roaster.py  user.py
backend/roastnotes/router/: groups.py  ratings.py  roasters.py  roasts.py  users.py
backend/roastnotes/schemas/: group.py  group_roast.py  rating.py  response_models.py  roast.py  roaster.py  security.py  user.py
backend/roastnotes/services/: rating_manager.py
frontend/: README.md  TODO.md  package-lock.json  package.json  repomix-output.txt  tailwind.config.ts
frontend/src/: app.css
frontend/src/lib/: types.ts
frontend/src/lib/components/: AddRatingModal.svelte  AddRoastModal.svelte  AddRoasterModal.svelte  GroupRoastCard.svelte  Header.svelte  LandingOverview.svelte  RoastCard.svelte  SearchableDropdown.svelte  Tabs.svelte
frontend/src/lib/server/: api.ts  auth.ts
frontend/src/routes/: +layout.server.ts  +layout.svelte  +page.server.ts  +page.svelte
(+16 files in other folders)
